--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <!-- ✅ GIF Section -->
   <div class="gif-box">
-    <img src="https://media.giphy.com/media/l0MYC0LajbaPoEADu/giphy.gif" alt="Reaction GIF">
+    <img src="https://i.imgur.com/kYbRa5S.gif" alt="Reaction GIF">
     <!-- ✅ Replace with your own GIF link if needed -->
   </div>
 
