--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <!-- ✅ GIF Section -->
   <div class="gif-box">
-    <img src="https://i.imgur.com/kYbRa5S.gif" alt="Reaction GIF">
+    <img src="https://i.imgur.com/kYbRa5S.gif" alt="89303101fb51b345f6183c3737934869.gif">
     <!-- ✅ Replace with your own GIF link if needed -->
   </div>
 
