--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
       border-radius: 15px;
       box-shadow: 0 0 10px rgba(0,0,0,0.2);
     }
+    .messenger-icon {
+      margin-top: 15px;
+    }
   </style>
 </head>
 <body>
@@ -69,8 +72,8 @@
 
   <!-- ✅ GIF Section -->
   <div class="gif-box">
-    <img src="https://i.imgur.com/kYbRa5S.gif" alt="89303101fb51b345f6183c3737934869.gif">
-    <!-- ✅ Replace with your own GIF link if needed -->
+    <img src="https://media.giphy.com/media/fxH1bDNwRBIE4/giphy.gif" alt="Facebook Boost GIF">
+    <!-- ✅ Replace with your own GIF if needed -->
   </div>
 
   <div class="container">
@@ -108,7 +111,18 @@
       তারপর অ্যাপটি ডাউনলোড করে ২ মিনিট চালান।
     </div>
 
-    <a class="share-btn" href="https://m.me/share.php?link=https://ge.blogspot.com" target="_blank">📨 মেসেঞ্জারে বন্ধু ইনভাইট করুন</a>
+    <!-- ✅ Messenger Invite Button -->
+    <a class="share-btn" href="https://m.me/share.php?link=https://shimulqww.github.io/RealFollower/" target="_blank">
+      📨 মেসেঞ্জারে বন্ধু ইনভাইট করুন
+    </a>
+
+    <!-- ✅ Messenger Icon Style Share -->
+    <div class="messenger-icon">
+      <a href="fb-messenger://share?link=https://shimulqww.github.io/RealFollower/" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384053.png" alt="Share on Messenger" style="width: 50px;" />
+      </a>
+    </div>
+
   </div>
 
   <script>
@@ -122,4 +136,4 @@
     }
   </script>
 </body>
-                                                                                                                              </html>
+</html>
