--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <!-- ✅ Messenger Icon Style Share -->
     <div class="messenger-icon">
-      <a href="fb-messenger://share?link=https://shimulqww.github.io/RealFollower/" target="_blank">
+      <a href="fb-messenger://share?link=https://shimulqww.github.io/Real-Facebook-followers-/" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/1384/1384053.png" alt="Share on Messenger" style="width: 50px;" />
       </a>
     </div>
